--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -19,7 +19,7 @@
 
         <link rel="shortcut icon" href="icons/640px-Logo_NIKE.svg.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../css/style.css">
 
     <title>ACERCA DE</title>
 </head>
@@ -27,19 +27,20 @@
 <body>
 
     <header id="header">
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid"> 
-                <a class="navbar-brand" href="#">NIKE</a>
+                <a class="navbar-brand" href="../index.html">NIKE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">ACERDA DE</a>
+                        <a class="nav-link" href="#">ACERDA DE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contacto.html">CONTACTO</a>
@@ -50,8 +51,6 @@
                     <li class="nav-item">   
                         <a class="nav-link" href="./mujer.html">MUJER</a>
                     </li>
-
-
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -59,7 +58,8 @@
                 </form>
                 </div>
             </div>
-            </nav>
+        </nav>
+
     </header>
 
 </body>
@@ -70,29 +70,33 @@
 
 <footer id="footer">
 
-            
+                
     <section class="footer-logo">
-        <img src="icons/640px-Logo_NIKE.svg.ico" alt="">
+        <figure>
+            <img src="../icons/640px-Logo_NIKE.svg.ico" alt="" class="foto">
+        </figure>
     </section>
 
     <section class="footer-links">
-        <ul>
-            <a href="../index.html"><li>INICIO</li></a>
-            <a href="contacto.html"><li>CONTACTO</li></a>
-            <a href="hombre.html"><li>HOMBRE</li></a>
-            <a href="mujer.html"><li>MUJER</li></a>
-            <a href="#"><li>ACERCA DE</li></a>
+        <ul >
+            <a class="linkInicio" href="../index.html"><li style="color: white;">INICIO</li></a>
+            <a href="/pages/contacto.html"><li style="color: white;">CONTACTO</li></a>
+            <a href="/pages/hombre.html"><li style="color: white;">HOMBRE</li></a>
+            <a href="/pages/mujer.html"><li style="color: white;">MUJER</li></a>
+            <a href="#"><li style="color: white;">ACERCA DE</li></a>
         </ul>
-
     </section>
 
     <section class="footer-redes">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <a href=""><i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i></a>
+        <a href=""><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+        <a href=""><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+        <a href=""><i class="fa-brands fa-square-x-twitter" style="color: #ffffff;"></i></a>
     </section>
+
+</footer>
+
+<script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </footer>
 
 </html>
