--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -64,36 +64,96 @@
 
 </body>
 
-<main>
-    <h1>ACERCA DE NOSOTROS</h1>
+<main class="main">
+
+    <section class="container-section-1">
+        <h1 class="section-1-title">ACERCA DE NOSOTROS</h1>
+        <div class="us">
+            <div class="us-text">
+                <div class="us-paragraph">
+                    <p class="paragraph-text">
+                        En Nike, nos dedicamos a impulsar el potencial humano a través de la innovación en el deporte. Inspiramos a atletas de todos los niveles y fomentamos una comunidad global que valora la motivación, el esfuerzo y la excelencia.
+                    </p>
+                    <p class="paragraph-text">
+                        Nuestro compromiso con la innovación y la calidad se refleja en cada uno de nuestros productos, desde el diseño hasta los materiales, creados para ofrecer el mejor rendimiento y confort. Cada pieza de nuestra colección es resultado de una constante búsqueda de mejora, impulsada tanto por las necesidades de los atletas como por nuestra pasión por redefinir los límites del deporte.
+                    </p>
+                    <p class="paragraph-text">
+                        En Nike, creemos que el deporte es para todos, y trabajamos continuamente para inspirar a personas de todas las edades a moverse, explorar y alcanzar sus metas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="us-rs">
+                <h3 class="us-rs-title">Redes Sociales</h3>
+            </div>
+
+            <div class="rs-icon">
+                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-square-facebook" style="color: #000000;"></i></a> </a>
+                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-instagram" style="color: #000000;"></i></a> </a>
+                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-youtube" style="color: ##000000;"></i></a> </a>
+                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-square-x-twitter" style="color: #000000;"></i></a> </a>
+            </div>
+
+            <div class="us-img">
+                <img src="/images/fondos/acerca.webp" alt="" class="img-img">
+            </div>
+
+        </div>
+    </section>
+
+    <section class="container-section-2"></section>
+    <section class="container-section-3"></section>
+    <section class="container-section-4"></section>
+    <section class="container-section-5"></section>
+    <section class="container-section-6"></section>
+    <section class="container-section-7"></section>
+
 </main>
 
-<footer id="footer">
+<footer class="footer">
 
-                
-    <section class="footer-logo">
-        <figure>
-            <img src="../icons/640px-Logo_NIKE.svg.ico" alt="" class="foto">
-        </figure>
-    </section>
+    <ul class="social-icon">
 
-    <section class="footer-links">
-        <ul >
-            <a class="linkInicio" href="../index.html"><li style="color: white;">INICIO</li></a>
-            <a href="/pages/contacto.html"><li style="color: white;">CONTACTO</li></a>
-            <a href="/pages/hombre.html"><li style="color: white;">HOMBRE</li></a>
-            <a href="/pages/mujer.html"><li style="color: white;">MUJER</li></a>
-            <a href="#"><li style="color: white;">ACERCA DE</li></a>
-        </ul>
-    </section>
+        <li class="icon-elem">
+            <a href="" class="icon">
+                <a href=""><i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i></a>
+            </a>
+        </li>
 
-    <section class="footer-redes">
-        <a href=""><i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i></a>
-        <a href=""><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
-        <a href=""><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
-        <a href=""><i class="fa-brands fa-square-x-twitter" style="color: #ffffff;"></i></a>
-    </section>
-
+        <li class="icon-elem">
+            <a href="" class="icon">
+                <a href=""><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+            </a>
+        </li>
+        <li class="icon-elem">
+            <a href="" class="icon">
+                <a href=""><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+            </a>
+        </li>
+        <li class="icon-elem">
+            <a href="" class="icon">
+                <a href=""><i class="fa-brands fa-square-x-twitter" style="color: #ffffff;"></i></a>
+            </a>
+        </li>
+    </ul>
+    <ul class="menu">
+        <li class="menu-elem">
+            <a href="#" class="menu-icon"> INICIO </a>
+        </li>
+        <li class="menu-elem">
+            <a href="/pages/acerca-de.html" class="menu-icon"> ACERCA DE </a>
+        </li>
+        <li class="menu-elem">
+            <a href="/pages/contacto.html" class="menu-icon"> CONTACTO </a>
+        </li>
+        <li class="menu-elem">
+            <a href="/pages/hombre.html" class="menu-icon"> HOMBRE </a>
+        </li>
+        <li class="menu-elem">
+            <a href="/pages/mujer.html" class="menu-icon"> MUJER </a>
+        </li>
+    </ul>
+    <p class="text">@2024 | Todos los derechos reservados</p>
 </footer>
 
 <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
