--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -90,7 +90,7 @@
             <div class="rs-icon">
                 <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-square-facebook" style="color: #000000;"></i></a> </a>
                 <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-instagram" style="color: #000000;"></i></a> </a>
-                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-youtube" style="color: ##000000;"></i></a> </a>
+                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-youtube" style="color: #000000;"></i></a> </a>
                 <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-square-x-twitter" style="color: #000000;"></i></a> </a>
             </div>
 
