--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -36,16 +36,16 @@
                                 <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/acerca-de.html">ACERDA DE</a>
+                                <a class="nav-link" href="./acerca-de.html">ACERDA DE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/contacto.html">CONTACTO</a>
+                                <a class="nav-link" href="./contacto.html">CONTACTO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">HOMBRE</a>
                             </li>
                             <li class="nav-item">   
-                                <a class="nav-link" href="/pages/mujer.html">MUJER</a>
+                                <a class="nav-link" href="./mujer.html">MUJER</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
