--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -36,13 +36,13 @@
                                 <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/acerca-de.html">ACERDA DE</a>
+                                <a class="nav-link" href="./acerca-de.html">ACERDA DE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/contacto.html">CONTACTO</a>
+                                <a class="nav-link" href="./contacto.html">CONTACTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/hombre.html">HOMBRE</a>
+                                <a class="nav-link" href="./hombre.html">HOMBRE</a>
                             </li>
                             <li class="nav-item">   
                                 <a class="nav-link" href="#">MUJER</a>
