--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -65,15 +65,13 @@
 </body>
 
 <main class="main">
-
     <section class="container-section-1">
-        <h1 class="section-1-title">ACERCA DE NOSOTROS</h1>
+        <h1 class="section-1-title">Sobre Nosotros</h1>
         <div class="us">
             <div class="us-text">
                 <div class="us-paragraph">
                     <p class="paragraph-text">
-                        En Nike, nos dedicamos a impulsar el potencial humano a través de la innovación en el deporte. Inspiramos a atletas de todos los niveles y fomentamos una comunidad global que valora la motivación, el esfuerzo y la excelencia.
-                    </p>
+                        En Nike, nos dedicamos a impulsar el potencial humano a través de la innovación en el deporte. Inspiramos a atletas de todos los niveles y fomentamos una comunidad global que valora la motivación, el esfuerzo y la excelencia.                    </p>
                     <p class="paragraph-text">
                         Nuestro compromiso con la innovación y la calidad se refleja en cada uno de nuestros productos, desde el diseño hasta los materiales, creados para ofrecer el mejor rendimiento y confort. Cada pieza de nuestra colección es resultado de una constante búsqueda de mejora, impulsada tanto por las necesidades de los atletas como por nuestra pasión por redefinir los límites del deporte.
                     </p>
@@ -83,32 +81,23 @@
                 </div>
             </div>
 
-            <div class="us-rs">
-                <h3 class="us-rs-title">Redes Sociales</h3>
-            </div>
-
-            <div class="rs-icon">
-                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-square-facebook" style="color: #000000;"></i></a> </a>
-                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-instagram" style="color: #000000;"></i></a> </a>
-                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-youtube" style="color: #000000;"></i></a> </a>
-                <a href="" class="rs-link"> <a href=""><i class="fa-brands fa-square-x-twitter" style="color: #000000;"></i></a> </a>
-            </div>
-
             <div class="us-img">
-                <img src="/images/fondos/acerca.webp" alt="" class="img-img">
+                <img src="/images/fondos/acerca.webp" alt="Imagen de hamburguesa" class="img-img">
             </div>
+        </div>
 
+        <div class="us-rs">
+            <h3 class="us-rs-title">Nuestras Redes Sociales</h3>
+            <div class="rs-icon">
+                <a href="" class="rs-link"><i class="fa-brands fa-square-facebook" style="color: #000000;"></i></a>
+                <a href="" class="rs-link"><i class="fa-brands fa-instagram" style="color: #000000;"></i></a>
+                <a href="" class="rs-link"><i class="fa-brands fa-youtube" style="color: #000000;"></i></a>
+                <a href="" class="rs-link"><i class="fa-brands fa-square-x-twitter" style="color: #000000;"></i></a>
+            </div>
         </div>
     </section>
-
-    <section class="container-section-2"></section>
-    <section class="container-section-3"></section>
-    <section class="container-section-4"></section>
-    <section class="container-section-5"></section>
-    <section class="container-section-6"></section>
-    <section class="container-section-7"></section>
-
 </main>
+
 
 <footer class="footer">
 
