--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 
                 <section  class="fondo-inicio">
-                    <img src="/images/fondos/peakpx.jpg" alt="" class="foto-fondo">
+                    <img src="./images/fondos/peakpx.jpg" alt="" class="foto-fondo">
                 </section>
 
 
