--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -82,7 +82,7 @@
             </div>
 
             <div class="us-img">
-                <img src="/images/fondos/acerca de.jpg" alt="Imagen de zapatilla" class="img-img">
+                <img src="../images/fondos/acerca de.jpg" alt="Imagen de zapatilla" class="img-img">
             </div>
         </div>
 
