--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -12,7 +12,7 @@
     <!--libreria de bts -->
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
-    <link rel="shortcut icon" href="icons/640px-Logo_NIKE.svg.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icons/640px-Logo_NIKE.svg.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="../css/style.css">
 
