--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="nike, ropa, deporte, deportivo">
+        <meta name="description" content="Tienda online de la marca nike">
+        <meta name="author" content="Lionel Gomez">
+        <meta name="copyright" content="@2024 | Todos los derechos reservados">
 
+        
         <!--ESTILOS CSS-->
 
         <!--libreria font awesome-->
@@ -13,7 +18,7 @@
         <!--libreria de bts -->
         <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
-        <link rel="shortcut icon" href="../icons/640px-Logo_NIKE.svg.ico" type="image/x-icon">
+        <link title="LOGO"  rel="shortcut icon" href="../icons/640px-Logo_NIKE.svg.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="../css/style.css">
         <title>CONTACTO</title>
