--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -132,19 +132,19 @@
     </ul>
     <ul class="menu">
         <li class="menu-elem">
-            <a href="#" class="menu-icon"> INICIO </a>
+            <a href="../index.html" class="menu-icon"> INICIO </a>
         </li>
         <li class="menu-elem">
-            <a href="/pages/acerca-de.html" class="menu-icon"> ACERCA DE </a>
+            <a href="#" class="menu-icon"> ACERCA DE </a>
         </li>
         <li class="menu-elem">
-            <a href="/pages/contacto.html" class="menu-icon"> CONTACTO </a>
+            <a href="./contacto.html" class="menu-icon"> CONTACTO </a>
         </li>
         <li class="menu-elem">
-            <a href="/pages/hombre.html" class="menu-icon"> HOMBRE </a>
+            <a href="./hombre.html" class="menu-icon"> HOMBRE </a>
         </li>
         <li class="menu-elem">
-            <a href="/pages/mujer.html" class="menu-icon"> MUJER </a>
+            <a href="./mujer.html" class="menu-icon"> MUJER </a>
         </li>
     </ul>
     <p class="text">@2024 | Todos los derechos reservados</p>
